@@ -1,5 +1,9 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2015-06-17 mmichaud <m.michael.michaud@orange.fr>
+  * fix bug in dbf writer described in
+    http://sourceforge.net/p/jump-pilot/mailman/message/34210973/
+
 2015-06-13 mmichaud <m.michael.michaud@orange.fr>
   * LayerView / AttributePanel selection synchronization
   * update SetAttributes PlugIn to 0.7.0
